# boilerplate-taskController

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.cmake/: GetGitData.cmake  version.cpp.in  version.hpp.in
include/: appContext.hpp  appContextBase.hpp  daemon.hpp  daemonConfig.hpp  taskManager.hpp
lib/include/cppsl/buffer/: circularBuffer.hpp
lib/include/cppsl/container/: dequeSafe.hpp  queueLockFree.hpp
lib/include/cppsl/log/: logManager.hpp  loggableBase.hpp  multiSinkWizard.hpp
lib/include/cppsl/threading/: scopedFwdThread.hpp  scopedThread.hpp
lib/include/cppsl/time/: roundWatch.hpp  stopTimer.hpp  utilities.hpp
lib/include/cppsl/utility/: bytesSwap.hpp  result.hpp  string_utility.hpp
lib/src/: CMakeLists.txt  Config.cmake.in
lib/src/log/: LoggingManager.cpp  multiSinkWizard.cpp
src/: CMakeLists.txt  appContext.cpp  daemon.cpp  main.cpp  taskController.cpp
subModules/: CMakeLists.txt
test/: CMakeLists.txt  circularBufferTest.cpp  dequeSafeTest.cpp  logManagerTest.cpp  queueLockFreeTest.cpp  roundWatchTest.cpp
